--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,16 +35,31 @@ jobs:
           git checkout -b releases/${{ env.VERSION }}
           git push origin releases/${{ env.VERSION }}
 
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          registry: cr.yandex
+          username: oauth
+          password: ${{ secrets.YC_OAUTH }}
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v4
         with:
+          context: .
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4
+        with:
+
           push: true
           tags: |
             ${{ env.REGISTRY }}/app:${{ env.VERSION }}
             ${{ env.REGISTRY }}/app:${{ env.VERSION }}_latest
+
           registry: cr.yandex
           username: oauth
           password: ${{ secrets.YC_OAUTH }}
+
 
       - name: Create git tag
         run: |
